// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FormCheckBox rendering tests FormCheckBox - className defined - test 1`] = `
<div>
  <div
    class="gap-2 flex items-center py-1"
    data-slot="form-item"
    data-testid="test-789"
  >
    <button
      aria-checked="false"
      aria-describedby="_r_1_-form-item-description"
      aria-invalid="false"
      class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
      data-slot="form-control"
      data-state="unchecked"
      id="_r_1_-form-item"
      role="checkbox"
      type="button"
      value="on"
    >
      <div
        data-testid="mock-react-presence"
      >
        <span
          class="grid place-content-center text-current transition-none"
          data-slot="checkbox-indicator"
          data-state="unchecked"
          style="pointer-events: none;"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
      </div>
    </button>
    <label
      class="flex items-center gap-2 text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive cursor-pointer font-normal"
      data-error="false"
      data-slot="form-label"
      for="_r_1_-form-item"
    >
      Label 1
    </label>
  </div>
</div>
`;

exports[`FormCheckBox rendering tests FormCheckBox - className undefined - test 1`] = `
<div>
  <div
    class="gap-2 flex items-center"
    data-slot="form-item"
    data-testid="test-123"
  >
    <button
      aria-checked="false"
      aria-describedby="_r_0_-form-item-description"
      aria-invalid="false"
      class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
      data-slot="form-control"
      data-state="unchecked"
      id="_r_0_-form-item"
      role="checkbox"
      type="button"
      value="on"
    >
      <div
        data-testid="mock-react-presence"
      >
        <span
          class="grid place-content-center text-current transition-none"
          data-slot="checkbox-indicator"
          data-state="unchecked"
          style="pointer-events: none;"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
      </div>
    </button>
    <label
      class="flex items-center gap-2 text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive cursor-pointer font-normal"
      data-error="false"
      data-slot="form-label"
      for="_r_0_-form-item"
    >
      Label 1
    </label>
  </div>
</div>
`;
